# PyGraphCode

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  PyGraph.pro  README.md  index.html
.github/workflows/: CodeCoverage.yml  Documents.yml
CodeCoverage/: index-sort-f.html  index-sort-l.html  index.html
CodeCoverage/src/: AbstractElement.cpp.func-sort-c.html  AbstractElement.cpp.func.html  AbstractElement.cpp.gcov.html  BuilderContainer.cpp.func-sort-c.html  BuilderContainer.cpp.func.html  BuilderContainer.cpp.gcov.html  BuilderControlPanel.cpp.func-sort-c.html  BuilderControlPanel.cpp.func.html  BuilderControlPanel.cpp.gcov.html  BuilderControlsButtons.cpp.func-sort-c.html  BuilderControlsButtons.cpp.func.html  BuilderControlsButtons.cpp.gcov.html  CodeText.cpp.func-sort-c.html  CodeText.cpp.func.html  CodeText.cpp.gcov.html  ConditionalElement.cpp.func-sort-c.html  ConditionalElement.cpp.func.html  ConditionalElement.cpp.gcov.html  ConstantDecimalElement.cpp.func-sort-c.html  ConstantDecimalElement.cpp.func.html  ConstantDecimalElement.cpp.gcov.html  ConstantTextElement.cpp.func-sort-c.html  ConstantTextElement.cpp.func.html  ConstantTextElement.cpp.gcov.html  CustomElementInputDialog.cpp.func-sort-c.html  CustomElementInputDialog.cpp.func.html  CustomElementInputDialog.cpp.gcov.html  DeleteItem.cpp.func-sort-c.html  DeleteItem.cpp.func.html  DeleteItem.cpp.gcov.html  ElementDragEventHandler.cpp.func-sort-c.html  ElementDragEventHandler.cpp.func.html  ElementDragEventHandler.cpp.gcov.html  ElementManager.cpp.func-sort-c.html  ElementManager.cpp.func.html  ElementManager.cpp.gcov.html  ElementUserInputs.cpp.func-sort-c.html  ElementUserInputs.cpp.func.html  ElementUserInputs.cpp.gcov.html  ElementsControlButtons.cpp.func-sort-c.html  (+62 more)
Doc/: CMakeLists.txt  Doxyfile  header.tex
Documents/html/: _abstract_element_8h_source.html  _basic_element_type_8h_source.html  _builder_container_8h_source.html  _builder_control_panel_8h_source.html  _builder_controls_buttons_8h_source.html  _code_text_8h_source.html  _conditional_element_8h_source.html  _constant_decimal_element_8h_source.html  _constant_text_element_8h_source.html  _container_information_8h_source.html  _custom_element_input_dialog_8h_source.html  _delete_item_8h_source.html  _element_drag_event_handler_8h_source.html  _element_manager_8h_source.html  _element_user_inputs_8h_source.html  _elements_control_buttons_8h_source.html  _elements_creator_8h_source.html  _elements_left_navigator_8h_source.html  _elements_list_widget_8h_source.html  _for_loop_element_8h_source.html  _if_loop_element_8h_source.html  _image_button_8h_source.html  _input_label_dialog_8h_source.html  _internal_drag_event_handler_8h_source.html  _j_s_o_n_data_handler_8h_source.html  _main_window_8h_source.html  _main_window_u_i_8h_source.html  _operation_element_8h_source.html  _parameter_u_i_builder_8h_source.html  _read_variable_element_8h_source.html  _resulted_text_view_8h_source.html  _search_bar_widget_8h_source.html  _settings_manager_8h_source.html  _user_defined_element_8h_source.html  _write_variable_element_8h_source.html  annotated.html  annotated_dup.js  class_abstract_element-members.html  class_abstract_element.html  class_builder_container-members.html  (+77 more)
Documents/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_2.js  classes_4.js  classes_6.js  classes_8.js  classes_d.js  classes_e.js  classes_f.js  searchdata.js
src/: AbstractElement.cpp  AbstractElement.h  BasicElementType.h  BuilderContainer.cpp  BuilderContainer.h  BuilderControlPanel.cpp  BuilderControlPanel.h  BuilderControlsButtons.cpp  BuilderControlsButtons.h  CMakeLists.txt  CodeText.cpp  CodeText.h  ConditionalElement.cpp  ConditionalElement.h  ConstantDecimalElement.cpp  ConstantDecimalElement.h  ConstantTextElement.cpp  ConstantTextElement.h  ContainerInformation.h  CustomElementInputDialog.cpp  CustomElementInputDialog.h  DeleteItem.cpp  DeleteItem.h  ElementDragEventHandler.cpp  ElementDragEventHandler.h  ElementManager.cpp  ElementManager.h  ElementUserInputs.cpp  ElementUserInputs.h  ElementsControlButtons.cpp  ElementsControlButtons.h  ElementsCreator.cpp  ElementsCreator.h  ElementsLeftNavigator.cpp  ElementsLeftNavigator.h  ElementsListWidget.cpp  ElementsListWidget.h  ForLoopElement.cpp  ForLoopElement.h  IfLoopElement.cpp  (+36 more)
src/qml/: SerachBar.qml
test/: BaseTest.cpp  BaseTest.h  CMakeLists.txt  MainWindowManager.cpp  MainWindowManager.h  TestBuilderContainer.cpp  TestBuilderContainer.h  TestManager.cpp  TestManager.h  TestSearchBarWidget.cpp  TestSearchBarWidget.h  main.cpp
